<resources>
    <string name="app_name">WGU_Mobile</string>
    <string name="hint_word">Start typing...</string>
    <string name="button_save">Save</string>
    <string name="term_empty_not_saved">Term not saved because it is empty.</string>
    <string name="button_description_return">Return</string>
    <string name="term_title">Term Title</string>
    <string name="terms">Terms</string>
    <string name="new_term">New Term</string>
    <string name="term_details">Term Details</string>
    <string name="associated_term">Associated Term</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="course_title">Course Title</string>
    <string name="courses">Courses</string>
    <string name="new_course">New Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="course_details">Course Details</string>
    <string name="status">Status</string>
    <string name="ins_name">Instructor Name</string>
    <string name="ins_phone">Instructor Phone</string>
    <string name="ins_email">Instructor Email</string>
    <string name="course_empty_not_saved">Course not saved because it is empty.</string>
    <string name="note">Notes:</string>
    <string name="select_term">Select Term</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="assessments">Assessments</string>
    <string name="new_assessment">New Assessment</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="associated_course">Associated Course</string>
    <string name="type">Type</string>
    <string name="assessment_empty_not_saved">Assessment not saved because it is empty.</string>
    <string name="select_course">Select Course</string>
    <string name="directions">Directions</string>
    <string name="app_instructions">
        <b>About\n\n</b>
        <p>This program is a mobile application designed to help users manage their academic
            progress. It allows users to create, view, and edit terms, courses, and assessments.\n</p>
        <b>\n\nDirections\n\n</b>
    <p>To get started, you can navigate using the action bar to the "Terms" tab to view all of your created terms. Here,
        you will be able to see the start and end date of each term.\n</p><p>\nTo create a new term, you can click on the "+" button
        the center right side of the "Terms" tab. To edit a term, you can hold down on the desired
        term and it will bring you to an editing page. To delete a term, you can swipe left or
        right on the term in the list. However, please note that you will not be able to delete a
        term if there are courses within the dates of that term.\n</p><p>\nIn the "Courses" tab, you will be able to
        view all of your created courses and filter the list by the associated term. By selecting a course, you will
        be able to view the details of the course.
        You can also create, edit, or delete a course the same way with the terms as previously mentioned.\n</p><p>\nIn the "Assessments" tab, you will be able to view
        all of your created assessments and filter the list by an associated course. By selecting an assessment,
        you will be able to view the details of the assessment. You can also create, edit, or delete
        an assessment the same way as previously mentioned. Note that deleting a course will also delete all associated assessments.\n</p></string>
</resources>